Using minified resources

--- a/home.html
+++ b/home.html
@@ -8,8 +8,7 @@
 	<meta name="robots" content="all">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-	<!--<link rel="stylesheet" type="text/css" href="{{blogurl}}/min.css">-->
-	<link rel="stylesheet" type="text/css" href="{{blogurl}}/res/style.css">
+	<link rel="stylesheet" type="text/css" href="{{blogurl}}/min.css">
 </head>
 <body>	
 	<header>
@@ -31,11 +30,6 @@
 	<footer>
 			<p>{{license}}</p>
 	</footer>
-	<script src='{{blogurl}}/js/minified.js'></script>
-	<script src='{{blogurl}}/js/history.js'></script>
-	<script src='{{blogurl}}/js/router.js'></script>
-	<script src='{{blogurl}}/js/readingTime.js'></script>
-	<script src='{{blogurl}}/user/config.js'></script>
-	<script src='{{blogurl}}/js/script.js'></script>
+	<script src='{{blogurl}}/min.js'></script>
 </body>
 </html>
