--- a/res/home.html
+++ b/res/home.html
@@ -14,7 +14,7 @@
 	<header>
 		<div id='image'></div>
 		<a id='twitter' href='http://twitter.com/{{twitter}}' target="_blank">@{{twitter}}</a>
-		<h1><a href='/'>{{blog}}</a></h1>
+		<h1><a href='{{blogurl}}'>{{blog}}</a></h1>
 		<h2>{{bio}}</h2>
 	</header>
 	<section>
@@ -25,11 +25,8 @@
 				<a class='linkedin' target="_blank" href="http://www.linkedin.com/shareArticle?mini=true&"></a>
 				<a class='tumblr' target="_blank" href="http://tumblr.com/share?s=&v=3&"></a>
 		</div>
-		<div id="disqus_thread"></div>
 	</section>
-	<footer>
-			<p>{{license}}</p>
-	</footer>
 	<script src='{{blogurl}}/min.js'></script>
+	<script src='http://browser-update.org/update.js' async></script>
 </body>
 </html>
