--- a/res/home.html
+++ b/res/home.html
@@ -8,7 +8,7 @@
 	<meta name="robots" content="all">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="{{blogurl}}/res/style.css">
+	<link rel="stylesheet" type="text/css" href="{{blogurl}}/min.css">
 </head>
 <body>	
 	<header>
